--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <!-- <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" /> -->
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png" />
   </head>
   <body>
     <include src="./partials/header.html"></include>
