--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,17 @@
     </main>
     <include src="./partials/footer.html"></include>
     <include src="./partials/mobile-menu.html"></include>
+    <include src="./partials/modal.html"></include>
 
     <script src="./index.js"></script>
     <script src="./js/mobile-menu.js"></script>
+    <script src="./js/modal.js"></script>
+
+    <!-- <script
+      type="text/javascript"
+      src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"
+    ></script>
+    <script type="text/javascript" src="jquery.the-modal.js"></script> -->
+    <!-- <link rel="stylesheet" type="text/css" href="the-modal.css" media="all" /> -->
   </body>
 </html>
