--- a/src/index.html
+++ b/src/index.html
@@ -24,16 +24,37 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/mobile-menu.html"></include>
     <include src="./partials/modal.html"></include>
+    <include src="./partials/scrollup.html"></include>
 
     <script src="./index.js"></script>
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
+    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
 
-    <!-- <script
-      type="text/javascript"
-      src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"
-    ></script>
-    <script type="text/javascript" src="jquery.the-modal.js"></script> -->
-    <!-- <link rel="stylesheet" type="text/css" href="the-modal.css" media="all" /> -->
+    <script>
+      //кнопка прокрутки
+      // Получить кнопку
+      var mybutton = document.getElementById('myBtn');
+
+      // Когда пользователь прокручивает вниз 20px от верхней части документа, покажите кнопку
+      mybutton.addEventListener('click', topFunction);
+      window.onscroll = function () {
+        scrollFunction();
+      };
+
+      function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+          mybutton.style.display = 'block';
+        } else {
+          mybutton.style.display = 'none';
+        }
+      }
+
+      // Когда пользователь нажимает на кнопку, прокрутите до верхней части документа
+      function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+      }
+    </script>
   </body>
 </html>
